[package]
name = "ccproxy"
version = "0.1.0"
authors = ["Chanho Chung <hello@chungchan.dev>"]
edition = "2024"
description = "A lightweight reverse proxy for Minecraft Bedrock Edition servers."
repository = "https://github.com/chungchandev/ccproxy.git"
license = "Apache-2.0"
keywords = ["minecraft", "proxy", "cli", "server"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env", "yaml"] }
rand = { version = "0.9.2", features = ["std"] }
rust-raknet = { git = "https://github.com/chungchandev/rust-raknet.git", rev = "88c6e0f8c01859b2600fb1d41bf026f4598a3c0b" }
serde = { version = "1.0.227", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.16"
tokio = { version = "1.47.1" }
tokio-graceful-shutdown = "0.17.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

[build-dependencies]
built = "0.8.0"
